<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="50dp"
    tools:context=".views.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_handyman"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >

    </androidx.appcompat.widget.AppCompatImageView>
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_prompt"
        android:layout_marginTop="20dp"
        >

    </TextView>

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        app:layout_constraintTop_toBottomOf="@id/login_text"
        android:layout_marginTop="20dp"

        >
        <EditText
            android:id="@+id/emailAddress"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:layout_marginBottom="10dp"

            android:importantForAutofill="no">
        </EditText>
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no">
        </EditText>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            >

        </TextView>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            >

        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_account"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginEnd="10dp"
            >

        </TextView>

        <TextView
            android:id="@+id/signUp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/sign_up"

            >

        </TextView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>