<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ActivateAccountActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_handyman"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >

    </androidx.appcompat.widget.AppCompatImageView>
    <TextView
        android:id="@+id/activate_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/activate_account"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="20dp"
        >

    </TextView>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activate_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins_light"
        android:text="@string/activate_account_instruction"
        android:layout_marginTop="20dp"
        >

    </TextView>

    <TextView
        android:id="@+id/tooLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/resend_activation"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="10dp"
        >

    </TextView>
    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tooLong"
        android:layout_marginTop="20dp"

        >
        <EditText
            android:id="@+id/activationCode"
            android:inputType="text"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/activation_code"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no">
        </EditText>


        <Button
            android:id="@+id/activate"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/activate_account"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            >

        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_need"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginEnd="10dp"
            >

        </TextView>

        <TextView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/go_back"

            >

        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>