<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".views.Dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        >

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="28sp"
            android:text="@string/welcome_greeting"
            >

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashBoardLayout"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:background="@drawable/primary_corner_radius_layout"
        >

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            >

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/requestButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_artisan"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:background="@drawable/primary_corner_radius_layout"
        android:textColor="@color/white"
        >

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>